--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <header class="header__section">
-        <h1 class="heading__text text-center mt-5">Weather App</h1>
+        <h1 class="heading__text text-center mt-5">Weather Forecast</h1>
     </header>
     <main class="body__section">
         <div>
